--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-divider": "^1.0.3",
     "react-native-wifi-reborn": "^4.3.7"
   },
   "devDependencies": {
