--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-divider": "^1.0.3",
+    "react-native-system-setting": "^1.7.6",
     "react-native-wifi-reborn": "^4.3.7"
   },
   "devDependencies": {
