--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
+    "base-64": "^1.0.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-divider": "^1.0.3",
